--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     .hero {
       height: 100vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('image/background.jpg');
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -140,15 +140,15 @@
         </div>
         <div class="col-md-6 text-center mt-4 mt-md-0">
              <h5 data-aos="fade-up">Hasil Jepretan</h5>
-             <img src="image/cat.jpg" class="img-fluid rounded shadow" alt="Hasil jepretan alam">
+             <img src="cat.jpg" class="img-fluid rounded shadow" alt="Hasil jepretan alam">
         </div>
 
         <div class="row mt-4">
           <div class="col-md-6">
-            <img src="image/sunset.jpg" class="img-fluid rounded shadow" alt="Senja">
+            <img src="sunset.jpg" class="img-fluid rounded shadow" alt="Senja">
           </div>
           <div class="col-md-6">
-            <img src="image/sky.jpg" class="img-fluid rounded shadow" alt="Langit">
+            <img src="sky.jpg" class="img-fluid rounded shadow" alt="Langit">
           </div>
         </div>
       </div>
@@ -265,3 +265,4 @@
 </script>
 </body>
 </html>
+
