--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     .hero {
       height: 100vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('background.jpg');
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("background.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -265,4 +265,5 @@
 </script>
 </body>
 </html>
+
 
