--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="card shadow-sm">
           <div class="card-body">
             <h5>YouTube</h5>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFgquLnL59alCl_2TQvOiD5Vgm1hCaGSI"></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/"></iframe>
           </div>
         </div>
       </div>
@@ -258,3 +258,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
