--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <a href="#contact" class="btn btn-dark me-2">Contact Me</a>
       <a href="#projects" class="btn btn-danger">View Projects</a>
     </div>
-    <div class="col-md-6 text-center">
+    <div class="col-md-6 col-lg-4">
       <img src="background.jpg" alt="Hero Image">
     </div>
   </div>
@@ -258,6 +258,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
