--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="card-body">
           <h5 class="card-title">Aplikasi Menu Restoran</h5>
           <p class="card-text">Prototipe UI/UX untuk aplikasi pemesanan menu di restoran. Didesain menggunakan Figma.</p>
-          <a href="https://www.figma.com/proto/jt1kDsGNY1DzS6z2BGsHve/Aplikasi-Menu" class="btn btn-dark" target="_blank">Lihat Desain</a>
+          <a href="https://www.figma.com/proto/jt1kDsGNY1DzS6z2BGsHve/Aplikasi-Menu?node-id=213-3703&t=ehUqXjT95iOp0XyL-1&scaling=scale-down&content-scaling=fixed&page-id=2%3A2663&starting-point-node-id=213%3A3703&show-proto-sidebar=1" class="btn btn-dark" target="_blank">Lihat Desain</a>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         <div class="card-body">
           <h5 class="card-title">Project UAS</h5>
           <p class="card-text">Prototipe aplikasi yang dikembangkan sebagai bagian dari Ujian Akhir Semester.</p>
-          <a href="https://www.figma.com/proto/dREFL6kfq7j1gR3gD0Cisp/Project-UAS" class="btn btn-dark" target="_blank">Lihat Desain</a>
+          <a href="https://www.figma.com/proto/dREFL6kfq7j1gR3gD0Cisp/Project-UAS?node-id=1-4&p=f&t=1xUbcymkCk9ny63I-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A4&show-proto-sidebar=1" class="btn btn-dark" target="_blank">Lihat Desain</a>
         </div>
       </div>
     </div>
@@ -258,6 +258,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
