--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@
     </div>
   </div>
 </section>
-
 <!-- Museum -->
 <section id="museum" class="section" style="background:#ffe4ef;">
   <div class="container text-center">
     <h2>Museum Works</h2>
     <p>Insights into my work presented at museums.</p>
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card shadow-sm">
+    <div class="row mt-4 g-4">
+      <div class="col-md-4 col-sm-12">
+        <div class="card shadow-sm h-100">
           <div class="card-body">
             <h3 data-aos="fade-up">Tulisan & Puisi</h3>
             <p data-aos="fade-up" data-aos-delay="100">Koleksi puisi, cerpen, dan tulisan lainnya. Salah satunya adalah karya "Rindu". Selengkapnya bisa dibaca di blog pribadiku.</p>
@@ -148,17 +147,17 @@
         </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card shadow-sm">
+      <div class="col-md-4 col-sm-12">
+        <div class="card shadow-sm h-100">
           <div class="card-body">
             <h5>Photography Showcase</h5>
             <p>A gallery of photographs I have taken. Hanya bisa dilihat oleh mata batin hehe.</p>
-            <img src="cat.jpg" class="img-fluid rounded shadow" alt="Hasil jepretan alam" width="50" height="25">
-          </div>
+            <a href="photo.html" class="btn btn-dark" target="_blank">Kunjungi Gallery</a>
+        </div>
         </div>
       </div>
-      <div class="col-md-12 mt-3">
-        <div class="card shadow-sm">
+      <div class="col-md-4 col-sm-12">
+        <div class="card shadow-sm h-100">
           <div class="card-body">
             <h5> Education and Innovation Blog</h5>
             <p>Tthoughts on the presentation of words in the art of technological innovation.</p>
@@ -174,18 +173,26 @@
 <section id="games" class="section container text-center">
   <h2>Games</h2>
   <p>Check out my game projects.</p>
-  <div class="row mt-4">
-    <div class="col-md-6">
-      <i class="fas fa-gamepad fa-3x mb-3"></i>
-      <h5>Game One</h5>
-      <p>An interactive adventure game.<br>Available on Web</p>
-      <a href="game.html" class="btn btn-dark me-2"> Play Gakkkk!!</a>
+  <div class="row mt-4 g-4">
+    <div class="col-md-6 col-sm-12">
+      <div class="card shadow-sm h-100">
+        <div class="card-body">
+          <i class="fas fa-gamepad fa-3x mb-3"></i>
+          <h5>Game One</h5>
+          <p>An interactive adventure game.<br>Available on Web</p>
+          <a href="game.html" class="btn btn-dark">Play</a>
+        </div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <i class="fas fa-puzzle-piece fa-3x mb-3"></i>
-      <h5>Game Two</h5>
-      <p>A puzzle-solving experience.<br>Available on Web</p>
-      <a href="game1.html" class="btn btn-dark me-2"> Play Gakkkk!! </a>
+    <div class="col-md-6 col-sm-12">
+      <div class="card shadow-sm h-100">
+        <div class="card-body">
+          <i class="fas fa-puzzle-piece fa-3x mb-3"></i>
+          <h5>Game Two</h5>
+          <p>A puzzle-solving experience.<br>Available on Web</p>
+          <a href="game1.html" class="btn btn-dark">Play</a>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -258,6 +265,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
