--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="row align-items-center">
     <div class="col-md-6">
       <h1>Welcome to My Portfolio</h1>
-      <p>Explore my projects, museum works, and games.</p>
+      <p>Explore my projects, museum works, and games. Hope You Enjoy In My World :)</p>
       <a href="#contact" class="btn btn-dark me-2">Contact Me</a>
       <a href="#projects" class="btn btn-danger">View Projects</a>
     </div>
@@ -116,7 +116,7 @@
       <div class="card shadow-sm">
         <div class="card-body">
           <h5 class="card-title">Project UAS</h5>
-          <p class="card-text">Prototipe aplikasi yang dikembangkan sebagai bagian dari Ujian Akhir Semester.</p>
+          <p class="card-text">Prototipe aplikasi yang dikembangkan bersama teman kelompok sebagai bagian dari Ujian Akhir Semester.</p>
           <a href="https://www.figma.com/proto/dREFL6kfq7j1gR3gD0Cisp/Project-UAS?node-id=1-4&p=f&t=1xUbcymkCk9ny63I-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A4&show-proto-sidebar=1" class="btn btn-dark" target="_blank">Lihat Desain</a>
         </div>
       </div>
@@ -180,7 +180,7 @@
           <i class="fas fa-gamepad fa-3x mb-3"></i>
           <h5>Game One</h5>
           <p>An interactive adventure game.<br>Available on Web</p>
-          <a href="game.html" class="btn btn-dark">Play</a>
+          <a href="game.html" class="btn btn-dark">Play gakk!! Aku marah nih T_T</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
           <i class="fas fa-puzzle-piece fa-3x mb-3"></i>
           <h5>Game Two</h5>
           <p>A puzzle-solving experience.<br>Available on Web</p>
-          <a href="game1.html" class="btn btn-dark">Play</a>
+          <a href="game1.html" class="btn btn-dark">Play gakk!! Aku marah nih T_T</a>
         </div>
       </div>
     </div>
@@ -201,7 +201,7 @@
 <section id="music" class="section" style="background:#ffe4ef;">
   <div class="container text-center">
     <h2>Music Playlist</h2>
-    <p>Listen to my current favorite tracks.</p>
+    <p>Listen to my current favorite tracks. </p>
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card shadow-sm">
@@ -233,7 +233,7 @@
         <input type="text" class="form-control mb-3" placeholder="Your Name">
         <input type="email" class="form-control mb-3" placeholder="Your Email">
         <textarea class="form-control mb-3" rows="4" placeholder="Message"></textarea>
-        <button class="btn btn-danger"> Can't To Send Message Guyss wkwkwkw </button>
+        <button class="btn btn-danger"> Can't To Send Message hehehe </button>
       </form>
     </div>
     <div class="col-md-6">
@@ -265,6 +265,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
