--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <i class="fas fa-gamepad fa-3x mb-3"></i>
           <h5>Game One</h5>
           <p>An interactive adventure game.<br>Available on Web</p>
-          <a href="game.html" class="btn btn-dark">Play gakk!! Aku marah nih T_T</a>
+          <a href="game.html" class="btn btn-dark">Play</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
           <i class="fas fa-puzzle-piece fa-3x mb-3"></i>
           <h5>Game Two</h5>
           <p>A puzzle-solving experience.<br>Available on Web</p>
-          <a href="game1.html" class="btn btn-dark">Play gakk!! Aku marah nih T_T</a>
+          <a href="game1.html" class="btn btn-dark">Play </a>
         </div>
       </div>
     </div>
@@ -265,6 +265,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
