--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <!-- Footer -->
 <footer class="animate">
   <div class="container">
-    <p>© 2025 Zahra Yulia Rahman - All Rights Reserved</p>
+    <p>© 2025 ZYR - All Rights Reserved</p>
     <div class="mt-3">
       <a href="#" class="text-light mx-2"><i class="fab fa-instagram fa-lg"></i></a>
       <a href="#" class="text-light mx-2"><i class="far fa-envelope fa-lg"></i></a>
@@ -1086,3 +1086,4 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
