--- a/index.html
+++ b/index.html
@@ -890,21 +890,23 @@ document.addEventListener('DOMContentLoaded', function() {
     experience: ["pengalaman", "experience", "kerja", "bekerja", "pekerjaan", "karir", "pengalaman kerja"],
     services: ["jasa", "service", "layanan", "freelance", "freelancer", "harga", "bayaran", "upah"],
     about: ["tentang", "about", "siapa", "perkenalan", "intro", "perkenalkan"]
+    hobby ["hobi", "rutinitas",]
   };
   
   // Responses untuk AI Assistant
   const responses = {
     greeting: "Halo! Senang bertemu dengan Anda. Ada yang bisa saya bantu tentang portofolio Zahra?",
-    skill: "Zahra memiliki kemampuan dalam HTML, CSS, JavaScript, React, Node.js, dan Python. Dia juga sedang mempelajari machine learning dan AI development. Skill utamanya adalah frontend development dengan React.",
+    skill: "Zahra memiliki kemampuan dalam HTML, CSS dan JavaScript. Dia juga sedang mempelajari machine learning dan AI development. Skill utamanya adalah UI/UX designer dan frontend development.",
     project: "Zahra telah mengerjakan beberapa project termasuk website portofolio ini, aplikasi todo list, website e-commerce sederhana, dan beberapa project machine learning dasar. Semua project bisa dilihat di halaman project portofolio ini.",
     contact: "Anda dapat menghubungi Zahra melalui email: zyulear27@gmail.com. Jangan ragu untuk menghubungi! Zahra senang berkolaborasi dalam project menarik.",
     thanks: "Sama-sama! Senang bisa membantu. Jika ada pertanyaan lagi, silakan tanyakan saja. Jangan lupa cek project-project Zahra ya!",
     help: "Saya di sini untuk membantu menjawab pertanyaan tentang Zahra. Anda bisa menanyakan tentang skill, project, pengalaman, pendidikan, atau cara menghubungi Zahra.",
-    education: "Zahra adalah lulusan Computer Science dari Universitas Contoh dengan IPK 3.8. Dia aktif dalam organisasi developer dan sering mengikuti workshop programming. Skripsi Zahra tentang implementasi AI pada aplikasi web.",
-    experience: "Zahra memiliki pengalaman magang sebagai web developer di Contoh Company selama 6 bulan. Dia juga aktif dalam project freelance dan open source. Saat ini Zahra sedang mencari opportunities sebagai frontend developer.",
-    services: "Zahra menerima jasa pembuatan website dan aplikasi web. Untuk informasi lebih lanjut tentang layanan dan harga, silakan hubungi Zahra langsung melalui email atau LinkedIn.",
-    about: "Zahra adalah seorang frontend developer pemula yang passionate terhadap teknologi web dan AI. Selain coding, Zahra juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi.",
-    default: "Maaf, saya tidak mengerti pertanyaan Anda. Coba tanyakan tentang skill, project, pengalaman, atau cara menghubungi Zahra. Atau mungkin Anda bisa menjelaskan dengan cara berbeda?"
+    education: "Zahra adalah mahasiswi dari Universitas Muhammadiyah Purwekerto Semester 5. Dia aktif dalam membuat project-project kecil dan sering mengikuti perkembangan inovasi teknologi.",
+    experience: "Zahra memiliki pengalaman magang sebagai UI/UX designer dan web developer di Upwork. Dia juga aktif dalam project freelance dan open source. Saat ini Zahra sedang mencari opportunities sebagai UI/UX designer dan frontend developer.",
+    services: "Zahra menerima jasa pembuatan website dan aplikasi web. Untuk informasi lebih lanjut tentang layanan dan harga, silakan hubungi Zahra langsung melalui email.",
+    about: "Zahra adalah seorang UI/UX designer dan programmer pemula yang passionate terhadap teknologi web dan AI. Selain coding, Zahra juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi.",
+    default: "Maaf, saya tidak mengerti pertanyaan Anda. Cukup ketik skill, freelance, project, pengalaman, pendidikan, atau cara menghubungi Zahra. Atau mungkin Anda bisa menjelaskan dengan cara berbeda?",
+    hobby: "Zahra memiliki banyak hobi yaitu membaca novel atau buku fiksi dan non fiksi, menulis, mendengarkan musik, nonton Drakor, ngemil, tidur dan membuat project-project kecil."
   };
   
   // Fungsi untuk memahami pesan pengguna
@@ -1086,4 +1088,5 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
