--- a/index.html
+++ b/index.html
@@ -889,8 +889,8 @@ document.addEventListener('DOMContentLoaded', function() {
     education: ["pendidikan", "education", "sekolah", "kuliah", "lulusan", "almamater", "kampus", "universitas"],
     experience: ["pengalaman", "experience", "kerja", "bekerja", "pekerjaan", "karir", "pengalaman kerja"],
     services: ["jasa", "service", "layanan", "freelance", "freelancer", "harga", "bayaran", "upah"],
-    about: ["tentang", "about", "siapa", "perkenalan", "intro", "perkenalkan"]
-    hobby ["hobi", "rutinitas",]
+    about: ["tentang", "about", "siapa", "perkenalan", "intro", "perkenalkan"],
+    hobby ["hobi", "rutinitas"]
   };
   
   // Responses untuk AI Assistant
@@ -1088,5 +1088,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
