--- a/index.html
+++ b/index.html
@@ -889,8 +889,7 @@ document.addEventListener('DOMContentLoaded', function() {
     education: ["pendidikan", "education", "sekolah", "kuliah", "lulusan", "almamater", "kampus", "universitas"],
     experience: ["pengalaman", "experience", "kerja", "bekerja", "pekerjaan", "karir", "pengalaman kerja"],
     services: ["jasa", "service", "layanan", "freelance", "freelancer", "harga", "bayaran", "upah"],
-    about: ["tentang", "about", "siapa", "perkenalan", "intro", "perkenalkan"],
-    hobby ["hobi", "rutinitas"]
+    about: ["tentang", "about", "siapa", "perkenalan", "intro", "perkenalkan"]
   };
   
   // Responses untuk AI Assistant
@@ -906,7 +905,6 @@ document.addEventListener('DOMContentLoaded', function() {
     services: "Zahra menerima jasa pembuatan website dan aplikasi web. Untuk informasi lebih lanjut tentang layanan dan harga, silakan hubungi Zahra langsung melalui email.",
     about: "Zahra adalah seorang UI/UX designer dan programmer pemula yang passionate terhadap teknologi web dan AI. Selain coding, Zahra juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi.",
     default: "Maaf, saya tidak mengerti pertanyaan Anda. Cukup ketik skill, freelance, project, pengalaman, pendidikan, atau cara menghubungi Zahra. Atau mungkin Anda bisa menjelaskan dengan cara berbeda?",
-    hobby: "Zahra memiliki banyak hobi yaitu membaca novel atau buku fiksi dan non fiksi, menulis, mendengarkan musik, nonton Drakor, ngemil, tidur dan membuat project-project kecil."
   };
   
   // Fungsi untuk memahami pesan pengguna
@@ -1088,6 +1086,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
