--- a/ai-assistant.html
+++ b/ai-assistant.html
@@ -242,8 +242,7 @@
             thanks: ["terima kasih", "thanks", "thank you", "makasih", "thx"],
             help: ["bantuan", "help", "bantu", "tolong", "caranya", "how to", "how do"],
             education: ["pendidikan", "education", "sekolah", "kuliah", "lulusan", "almamater"],
-            experience: ["pengalaman", "experience", "kerja", "bekerja", "pekerjaan", "karir"],
-            hobby ["hobi", "rutinitas"]
+            experience: ["pengalaman", "experience", "kerja", "bekerja", "pekerjaan", "karir"]
         };
         
         // Responses untuk AI Assistant
@@ -256,8 +255,7 @@
             help: "Saya di sini untuk membantu menjawab pertanyaan tentang Zahra. Anda bisa menanyakan tentang skill, project, atau cara menghubungi Zahra.",
             education: "Zahra adalah lulusan Computer Science dari Universitas Contoh. Dia aktif dalam organisasi developer dan sering mengikuti workshop programming.",
             experience: "Zahra memiliki pengalaman magang sebagai web developer di Contoh Company selama 6 bulan. Dia juga aktif dalam project freelance dan open source.",
-            default: "Maaf, saya tidak mengerti pertanyaan Anda. Coba tanyakan tentang skill, project, atau cara menghubungi Zahra.",
-            hobby: "Zahra memiliki banyak hobi yaitu membaca novel atau buku fiksi dan non fiksi, menulis, mendengarkan musik, nonton Drakor, ngemil, tidur dan membuat project-project kecil."
+            default: "Maaf, saya tidak mengerti pertanyaan Anda. Coba tanyakan tentang skill, project, atau cara menghubungi Zahra."
         };
         
         // Fungsi untuk memahami pesan pengguna
