--- a/index.html
+++ b/index.html
@@ -468,6 +468,42 @@
           </div>
         </div>
       </div>
+       <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-book-reader fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">Library</h5>
+            <p class="card-text">Every time you enter a library, you step into a world of infinite possibilities.</p>
+            <a href="llll.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-clipboard-list fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">Special Project</h5>
+            <p class="card-text">This is our time to rise and show what we can do. This comeback project will be a testament to our passion!</p>
+            <a href="l.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-credit-card fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">E-commerce</h5>
+            <p class="card-text">We plan to develop a new e-commerce website for businesses with a focus on increasing conversion and customer retention through attractive design and innovative features.</p>
+            <a href="l.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -1086,6 +1122,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
