--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               <i class="fas fa-clipboard-list fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Special Project</h5>
-            <p class="card-text">This is our time to rise and show what we can do. This comeback project will be a testament to our passion!</p>
+            <p class="card-text">This is my time to rise and show what i can do. This comeback project will be a testament to my passion!</p>
             <a href="l.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
           </div>
         </div>
@@ -499,7 +499,7 @@
               <i class="fas fa-credit-card fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">E-commerce</h5>
-            <p class="card-text">We plan to develop a new e-commerce website for businesses with a focus on increasing conversion and customer retention through attractive design and innovative features.</p>
+            <p class="card-text">I plan to develop a new e-commerce website for businesses with a focus on increasing conversion and customer retention through attractive design and innovative features.</p>
             <a href="l.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
           </div>
         </div>
@@ -1122,6 +1122,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
