--- a/photo.html
+++ b/photo.html
@@ -266,6 +266,29 @@
                     <p>Sunset With You</p>
                 </div>
             </div>
+
+            <div class="photo-card" data-category="Oyen Activity">
+                <img src="oyen.jpg" alt="Photo 4 Image">
+                <div class="photo-details">
+                    <h5>Photo 4</h5>
+                    <p>Become a Hero Cat</p>
+                </div>
+            </div>
+
+            <div class="photo-card" data-category="Oyen Activity">
+                <img src="oyen1.jpg" alt="Photo 5 Image">
+                <div class="photo-details">
+                    <h5>Photo 5</h5>
+                    <p>What up bro?!</p>
+                </div>
+            </div>
+
+            <div class="photo-card" data-category="Oyen Activity">
+                <img src="oyen2.jpg" alt="Photo 6 Image">
+                <div class="photo-details">
+                    <h5>Photo 6</h5>
+                    <p>What are you looking for</p>
+                </div>
         </div>
 
         <a href="index.html#museum" class="back-button">Back To Home Page</a>
@@ -324,3 +347,4 @@
     </script>
 </body>
 </html>
+
