--- a/photo.html
+++ b/photo.html
@@ -252,7 +252,7 @@
             </div>
 
             <div class="photo-card" data-category="Holiday">
-                <img src="sky.jpg" alt="Photo 2 Image">
+                <img src="sky1.jpg" alt="Photo 2 Image">
                 <div class="photo-details">
                     <h5>Photo 2</h5>
                     <p>Sky</p>
@@ -347,4 +347,5 @@
     </script>
 </body>
 </html>
+
 
