--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             </div>
             <h5 class="card-title">Library</h5>
             <p class="card-text">Every time you enter a library, you step into a world of infinite possibilities.</p>
-            <a href="llll.html" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
+            <a href="https://ra-ra277.github.io/bookheaven/" class="btn btn-dark mt-3" target="_blank">Update :D</a>
           </div>
         </div>
       </div>
@@ -1122,6 +1122,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
