--- a/index.html
+++ b/index.html
@@ -504,6 +504,18 @@
           </div>
         </div>
       </div>
+       <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-credit-card fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">SmartBudget</h5>
+            <p class="card-text">Smart Budget app is a financial management app that helps you track your income and expenses to control your personal finances.</p>
+            <a href="l.html" class="btn btn-dark mt-3" target="_blank">Update :D</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -1122,6 +1134,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
