--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </div>
             <h5 class="card-title">SmartBudget</h5>
             <p class="card-text">Smart Budget app is a financial management app that helps you track your income and expenses to control your personal finances.</p>
-            <a href="l.html" class="btn btn-dark mt-3" target="_blank">Update :D</a>
+            <a href="https://ra-ra277.github.io/SmartBudget/" class="btn btn-dark mt-3" target="_blank">Update :D</a>
           </div>
         </div>
       </div>
@@ -1134,6 +1134,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
