--- a/index.html
+++ b/index.html
@@ -516,6 +516,18 @@
           </div>
         </div>
       </div>
+       <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-credit-card fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">Nusantara Global</h5>
+            <p class="card-text">Apps designed with Figma can create the impression of an authentic, trusted global export business platform and facilitate communication with suppliers from around the world.</p>
+            <a href="https:" class="btn btn-dark mt-3" target="_blank">Coming soon</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -1134,6 +1146,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
