--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-clipboard-list fa-2x text-primary"></i>
+              <i class="fas fa-award fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Special Project</h5>
             <p class="card-text">This is my time to rise and show what i can do. This comeback project will be a testament to my passion!</p>
@@ -496,7 +496,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-credit-card fa-2x text-primary"></i>
+              <i class="fas fa-mobile-alt fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">E-commerce</h5>
             <p class="card-text">I plan to develop a new e-commerce website for businesses with a focus on increasing conversion and customer retention through attractive design and innovative features.</p>
@@ -508,7 +508,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-credit-card fa-2x text-primary"></i>
+              <i class="fas fa-lightbulb fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">SmartBudget</h5>
             <p class="card-text">Smart Budget app is a financial management app that helps you track your income and expenses to control your personal finances.</p>
@@ -520,7 +520,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-credit-card fa-2x text-primary"></i>
+              <i class="fas fa-globe-asia fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Nusantara Global</h5>
             <p class="card-text">Apps designed with Figma can create the impression of an authentic, trusted global export business platform and facilitate communication with suppliers from around the world.</p>
@@ -1146,6 +1146,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
