--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             </div>
             <h5 class="card-title">E-commerce</h5>
             <p class="card-text">I plan to develop a new e-commerce website for businesses with a focus on increasing conversion and customer retention through attractive design and innovative features.</p>
-            <a href="https://www.figma.com/proto/CwCPWZrLMmBA9wjW6nyEOY/Cuan?node-id=8-136&t=hwuTzvYQL1kpBhJQ-1&scaling=scale-down-width&content-scaling=fixed&page-id=8%3A135&starting-point-node-id=8%3A136" class="btn btn-dark mt-3" target="_blank">Update :D</a>
+            <a href="https://ra-ra277.github.io/BeautyZTZ/" class="btn btn-dark mt-3" target="_blank">Update :D</a>
           </div>
         </div>
       </div>
@@ -1146,6 +1146,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
