--- a/index.html
+++ b/index.html
@@ -532,8 +532,40 @@
   </div>
 </section>
 
+<!--My E-commerce-->
+<section id="E-commerce" class="section museum-section">
+  <div class="container">
+    <h2 class="section-title">My E-commerce</h2>
+    <p class="section-subtitle">Check out my products</p>
+    <div class="row justify-content-center">
+      <div class="col-lg-6 mb-4 animate">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center mb-4"><i class="fab fa-book-reader me-2"></i>ZTZ.com</h5>
+            <div class="ratio ratio-16x9">
+              <iframe style="border-radius:12px" src="https://ra-ra277.github.io/ztz/" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+            <a href="https://ra-ra277.github.io/ztz/" class="btn btn-dark mt-3" target="_blank">Visit ZTZ.com</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4 animate delay-1">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center mb-4"><i class="fab fa-shop me-2"></i>Affiliate Shopee</h5>
+            <div class="ratio ratio-16x9">
+              <iframe width="100%" height="315" src="https://collshp.com/raa27_?share_channel_code=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <a href="https://collshp.com/raa27_?share_channel_code=1" class="btn btn-dark mt-3">Visit Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Museum -->
-<section id="museum" class="section museum-section">
+<section id="museum" class="section">
   <div class="container">
     <h2 class="section-title">Museum Works</h2>
     <p class="section-subtitle">Insights into my creative works and writings</p>
@@ -579,7 +611,7 @@
 </section>
 
 <!-- Games -->
-<section id="games" class="section">
+<section id="games" class="section museum-section">
   <div class="container">
     <h2 class="section-title">Games</h2>
     <p class="section-subtitle">Check out my interactive game projects</p>
@@ -1146,6 +1178,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
