--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
       <div class="col-lg-6 mb-4 animate">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title text-center mb-4"><i class="fab fa-book-reader me-2"></i>ZTZ.com</h5>
+            <h5 class="card-title text-center mb-4"><i class=""></i>ZTZ.com</h5>
             <div class="ratio ratio-16x9">
               <iframe style="border-radius:12px" src="https://ra-ra277.github.io/ztz/" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
@@ -552,11 +552,22 @@
       <div class="col-lg-6 mb-4 animate delay-1">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title text-center mb-4"><i class="fab fa-shop me-2"></i>Affiliate Shopee</h5>
+            <h5 class="card-title text-center mb-4"><i class=""></i>Affiliate Shopee</h5>
             <div class="ratio ratio-16x9">
               <iframe width="100%" height="315" src="https://collshp.com/raa27_?share_channel_code=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <a href="https://collshp.com/raa27_?share_channel_code=1" class="btn btn-dark mt-3">Visit Now</a>
+          </div>
+        </div>
+      </div>
+       <div class="col-lg-6 mb-4 animate delay-1">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center mb-4"><i class=""></i>Up Work</h5>
+            <div class="ratio ratio-16x9">
+              <iframe width="100%" height="315" src="https://www.upwork.com/services/product/design-professional-mobile-app-and-web-design-1966027178107707256?ref=project_share" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <a href="https://www.upwork.com/services/product/design-professional-mobile-app-and-web-design-1966027178107707256?ref=project_share" class="btn btn-dark mt-3">Visit Now</a>
           </div>
         </div>
       </div>
@@ -1178,6 +1189,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
