--- a/index.html
+++ b/index.html
@@ -528,6 +528,30 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-love fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">KostMe</h5>
+            <p class="card-text">Web yang aku desain sendiri untuk bahan percobaan</p>
+            <a href="https://ra-ra277.github.io/kostme/" class="btn btn-dark mt-3" target="_blank">Update :D </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4 animate delay-2">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="icon-wrapper mb-3">
+              <i class="fas fa-startup fa-2x text-primary"></i>
+            </div>
+            <h5 class="card-title">Startup KostMe</h5>
+            <p class="card-text">Web yang dihosting oleh wordspress, sebenarnya gatel banget pengen aku ubah lebih enak diliat tapi masih bingung cara hosting code nya cemane </p>
+            <a href="https://kostme.id/" class="btn btn-dark mt-3" target="_blank">Update :D </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -1178,6 +1202,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
