--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-award fa-2x text-primary"></i>
+              <i class="fas fa-leaf fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Special Project</h5>
             <p class="card-text">This is my time to rise and show what i can do. This comeback project will be a testament to my passion!</p>
@@ -532,7 +532,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-love fa-2x text-primary"></i>
+              <i class="fas fa-seedling  fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">KostMe</h5>
             <p class="card-text">Web yang aku desain sendiri untuk bahan percobaan</p>
@@ -544,7 +544,7 @@
         <div class="card h-100">
           <div class="card-body">
             <div class="icon-wrapper mb-3">
-              <i class="fas fa-startup fa-2x text-primary"></i>
+              <i class="fas fa-building fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Startup KostMe</h5>
             <p class="card-text">Web yang dihosting oleh wordspress, sebenarnya gatel banget pengen aku ubah lebih enak diliat tapi masih bingung cara hosting code nya cemane </p>
@@ -1202,6 +1202,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
