--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Metadata dasar -->
@@ -223,7 +223,7 @@
             </div>
             <h5 class="card-title">KostMe</h5>
             <p class="card-text">Web yang aku desain sendiri untuk bahan percobaan</p>
-            <a href="https://ra-ra277.github.io/kostme/" class="btn btn-dark mt-3" target="_blank">Update :D </a>
+            <a href="https://kostme.netlify.app/" class="btn btn-dark mt-3" target="_blank">Update :D </a>
           </div>
         </div>
       </div>
@@ -479,3 +479,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
