--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <i class="fas fa-building fa-2x text-primary"></i>
             </div>
             <h5 class="card-title">Startup KostMe</h5>
-            <p class="card-text">Startup yang dibagun bersama team KWU dan Web yang dihosting dengan wordspress</p>
+            <p class="card-text">Startup yang dibangun bersama team KWU dan Web yang dihosting dengan wordspress</p>
             <a href="https://kostme.id/" class="btn btn-dark mt-3" target="_blank">Update :D </a>
           </div>
         </div>
@@ -479,5 +479,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
