--- a/index.html
+++ b/index.html
@@ -347,6 +347,26 @@
           </div>
         </div>
       </div>
+      <div class="col-md-6 mb-4 animate delay-1">
+         <div class="card h-100">
+           <div class="card-body text-center">
+             <i class="fas fa-puzzle-piece fa-3x mb-3 text-primary"></i>
+             <h5 class="card-title">Labirin Aksara I</h5>
+             <p class="card-text">Menyusun Jejak, Menjaga Tradisi. Available on Web platform.</p>
+             <a href="game3.html" class="btn btn-dark mt-3">Play Now</a>
+           </div>
+         </div>
+       </div>
+       <div class="col-md-6 mb-4 animate delay-1">
+         <div class="card h-100">
+           <div class="card-body text-center">
+             <i class="fas fa-puzzle-piece fa-3x mb-3 text-primary"></i>
+             <h5 class="card-title">Labirin Aksara II</h5>
+             <p class="card-text">Menyusun Jejak, Menjaga Tradisi dan Harmoni. Available on Web platform.</p>
+             <a href="game4.html" class="btn btn-dark mt-3">Play Now</a>
+           </div>
+         </div>
+       </div>
     </div>
   </div>
 </section>
@@ -479,6 +499,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
