--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       --glass-border: rgba(255, 255, 255, 0.1);
       --text-light: #f1f2f6;
       --text-muted: #a4b0be;
+      --text-muted1: #dbe5f0;
     }
 
     body {
@@ -464,22 +465,19 @@
       to { opacity: 1; transform: scale(1) translateY(0); }
     }
   </style>
-
-  <!-- Favicon -->
-  <link rel="icon" href="aset/favicon.ico" type="image/png">
 </head>
 
 <body>
 
   <!-- Loading Screen (Cute Heart Animation) -->
   <div class="loader-wrapper">
-    <div class="loader-heart"></div>
+    <div class="loader-heart"><div></div></div>
   </div>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">zyulear</a>
+      <a class="navbar-brand" href="#">Zahra.Design</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -809,28 +807,28 @@
               <div class="contact-card h-100">
                 <i class="fab fa-instagram"></i>
                 <h5>Instagram</h5>
-                <a href="https://instagram.com/zyulear" target="_blank" class="text-muted small">@zyulear</a>
+                <a href="https://instagram.com/zyulear" target="_blank" class="text-muted1 small">@zyulear</a>
               </div>
             </div>
             <div class="col-6">
               <div class="contact-card h-100">
                 <i class="fas fa-envelope"></i>
                 <h5>Email</h5>
-                <a href="mailto:zyulear27@gmail.com" class="text-muted small">zyulear27@gmail.com</a>
+                <a href="mailto:zyulear27@gmail.com" class="text-muted1 small">zyulear27@gmail.com</a>
               </div>
             </div>
             <div class="col-6">
               <div class="contact-card h-100">
                 <i class="fas fa-blog"></i>
                 <h5>Blog</h5>
-                <a href="http://wordsofartbyzyulear.blogspot.com" target="_blank" class="text-muted small">Words of Art</a>
+                <a href="http://wordsofartbyzyulear.blogspot.com" target="_blank" class="text-muted1 small">Words of Art</a>
               </div>
             </div>
             <div class="col-6">
               <div class="contact-card h-100">
                 <i class="fab fa-linkedin"></i>
                 <h5>LinkedIn</h5>
-                <a href="#" class="text-muted small">Zahra Yulia</a>
+                <a href="#" class="text-muted1 small">Zahra Yulia</a>
               </div>
             </div>
           </div>
@@ -843,14 +841,14 @@
   <footer>
     <div class="container">
       <h3 style="font-family: 'Playfair Display'; margin-bottom: 20px;">Zahra Yulia</h3>
-      <p class="text-muted mb-3; color: var(--text-light)">Made with 💖, Coffee, and Code.</p>
+      <p class="text-muted1 mb-4">Made with 💖, Coffee, and Code.</p>
       <div>
         <a href="https://instagram.com/zyulear" class="mx-3"><i class="fab fa-instagram fa-lg"></i></a>
         <a href="mailto:zyulear27@gmail.com" class="mx-3"><i class="far fa-envelope fa-lg"></i></a>
         <a href="#" class="mx-3"><i class="fab fa-linkedin fa-lg"></i></a>
         <a href="#" class="mx-3"><i class="fab fa-github fa-lg"></i></a>
       </div>
-      <p class="small text-muted mt-3; color: var(--text-light)">© 2025 ZYR - All Rights Reserved</p>
+      <p class="small text-muted1 mt-4">© 2025 ZYR - All Rights Reserved</p>
     </div>
   </footer>
 
@@ -913,8 +911,81 @@
         }
       });
     });
+
+    // 3. AI Assistant Logic
+    const aiButton = document.getElementById('ai-button');
+    const aiContainer = document.getElementById('ai-chat-container');
+    const aiClose = document.getElementById('ai-close');
+    const aiInput = document.getElementById('ai-user-input');
+    const aiSend = document.getElementById('ai-send');
+    const aiMessages = document.getElementById('ai-chat-messages');
+
+    // Toggle Chat
+    aiButton.addEventListener('click', () => {
+      aiContainer.classList.toggle('active');
+      aiButton.style.display = aiContainer.classList.contains('active') ? 'none' : 'block';
+    });
+
+    aiClose.addEventListener('click', () => {
+      aiContainer.classList.remove('active');
+      aiButton.style.display = 'block';
+    });
+
+    // Send Message Logic
+    function addMessage(text, sender) {
+      const div = document.createElement('div');
+      div.classList.add('message', sender === 'user' ? 'user-message' : 'ai-message');
+      div.textContent = text;
+      aiMessages.appendChild(div);
+      aiMessages.scrollTop = aiMessages.scrollHeight;
+    }
+
+    function handleAiResponse(userText) {
+      // Simple logic simulation - improvisasi lucu
+      let response = "";
+      const text = userText.toLowerCase();
+
+      if (text.includes('halo') || text.includes('hi') || text.includes('hay')|| text.includes('helo')) {
+        response = "Hai! Selamat datang di dunia aku. Mau lihat project atau main game? Atau mau kenalan dengan ku ups!!";
+      } else if (text.includes('siapa kamu')) {
+        response = "Aku asisten virtual Zahra yang paling imut! 😜 Ada yang bisa saya bantu tentang portofolio Zahra? 🤖✨";
+      } else if (text.includes('project') || text.includes('karya')) {
+        response = "Zahra telah mengerjakan beberapa project termasuk website portofolio ini, aplikasi todo list, website e-commerce sederhana, dan beberapa project machine learning dasar. Semua project bisa dilihat di halaman project portofolio ini. Zahra punya banyak project keren! Coba scroll ke bagian 'Projects' di atas yaw.";
+      } else if (text.includes('game')) {
+        response = "Suka main game? Zahra juga bikin game labirin aksara lho, seru banget!";
+      } else if (text.includes('siapa sih itu Zahra') || text.includes('about Zahra')) {
+        response = "Zahra adalah seorang UI/UX designer dan programmer pemula yang passionate terhadap teknologi web dan AI. Selain coding, dia juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi. Dia spesial kayak kamu sangat spesial buat dia ^.^";
+      } else if (text.includes('sekolah')) {
+        response = "Zahra adalah mahasiswi dari Universitas Muhammadiyah Purwekerto Semester 5. Dia aktif bukan aktif tapi SUPERRR DUPERRR EXCITEDDDDD dalam membuat project-project kecil dan sering mengikuti perkembangan inovasi teknologi. (Bisa dibilang dia takut ketinggalan)";
+      } else if (text.includes('ngapain aja dia') || text.includes('experience')) {
+        response = "Zahra memiliki pengalaman magang sebagai UI/UX designer dan web developer di Upwork. Dia juga aktif dalam project freelance dan open source. Saat ini Zahra sedang mencari opportunities sebagai UI/UX designer dan frontend developer.";
+      } else if (text.includes('skill')) {
+        response = "Zahra memiliki kemampuan dalam HTML, CSS dan JavaScript (TAPI BOONG awokawokawok) canda bebs >.< . Dia juga sedang mempelajari machine learning dan AI development. Skill utamanya adalah UI/UX designer dan frontend development. (TAPI VIBE CODING DUARRRRR)";
+      } else if (text.includes('pacar') || text.includes('jomblo')) {
+        response = "Waduh, pertanyaan sensitif nih! Rahasia dong 😜 yang jelas sih dia suka sama kim mingyu wkwkwkw";
+      } else if (text.includes('kontak') || text.includes('email')) {
+        response = "Bisa kirim email ke zyulear27@gmail.com ya! Jangan ragu untuk menghubungi! Zahra senang berkolaborasi dalam project menarik, hmmm seperti kamuu. BTW lebih menarik lagi info loker hehehehe >.<";
+      } else {
+        response = "Hmm, aku belum diajarin jawab itu huhuhu, coba ketik skill, siapa kamu?, siapa sih itu Zahra, sekolah dimana dia?, ngapain aja dia, atau dia jomblo kah?. Tapi Zahra pasti tahu! Coba kontak dia langsung via form di bawah.";
+      }
+
+      setTimeout(() => {
+        addMessage(response, 'ai');
+      }, 800);
+    }
+
+    aiSend.addEventListener('click', () => {
+      const text = aiInput.value.trim();
+      if (text) {
+        addMessage(text, 'user');
+        aiInput.value = '';
+        handleAiResponse(text);
+      }
+    });
+
+    function handleKeyPress(e) {
+      if (e.key === 'Enter') aiSend.click();
+    }
   </script>
-  <script src="script.js"></script>
 </body>
 </html>
-
