--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
         response = "Zahra telah mengerjakan beberapa project termasuk website portofolio ini, aplikasi todo list, website e-commerce sederhana, dan beberapa project machine learning dasar. Semua project bisa dilihat di halaman project portofolio ini. Zahra punya banyak project keren! Coba scroll ke bagian 'Projects' di atas yaw.";
       } else if (text.includes('game')) {
         response = "Suka main game? Zahra juga bikin game labirin aksara lho, seru banget!";
-      } else if (text.includes('siapa sih itu Zahra') || text.includes('about Zahra')) {
+      } else if (text.includes('tentang Zahra')) {
         response = "Zahra adalah seorang UI/UX designer dan programmer pemula yang passionate terhadap teknologi web dan AI. Selain coding, dia juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi. Dia spesial kayak kamu sangat spesial buat dia ^.^";
       } else if (text.includes('sekolah')) {
         response = "Zahra adalah mahasiswi dari Universitas Muhammadiyah Purwekerto Semester 5. Dia aktif bukan aktif tapi SUPERRR DUPERRR EXCITEDDDDD dalam membuat project-project kecil dan sering mengikuti perkembangan inovasi teknologi. (Bisa dibilang dia takut ketinggalan)";
@@ -966,7 +966,7 @@
       } else if (text.includes('kontak') || text.includes('email')) {
         response = "Bisa kirim email ke zyulear27@gmail.com ya! Jangan ragu untuk menghubungi! Zahra senang berkolaborasi dalam project menarik, hmmm seperti kamuu. BTW lebih menarik lagi info loker hehehehe >.<";
       } else {
-        response = "Hmm, aku belum diajarin jawab itu huhuhu, coba ketik skill, siapa kamu?, siapa sih itu Zahra, sekolah dimana dia?, ngapain aja dia, atau dia jomblo kah?. Tapi Zahra pasti tahu! Coba kontak dia langsung via form di bawah.";
+        response = "Hmm, aku belum diajarin jawab itu huhuhu, coba ketik skill, siapa kamu?, tentang Zahra, sekolah dimana dia?, ngapain aja dia, atau dia jomblo kah?. Tapi asisten virtual Zahra pasti tahu! Coba kontak dia langsung via form di bawah.";
       }
 
       setTimeout(() => {
@@ -989,3 +989,4 @@
   </script>
 </body>
 </html>
+
