--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
         response = "Zahra telah mengerjakan beberapa project termasuk website portofolio ini, aplikasi todo list, website e-commerce sederhana, dan beberapa project machine learning dasar. Semua project bisa dilihat di halaman project portofolio ini. Zahra punya banyak project keren! Coba scroll ke bagian 'Projects' di atas yaw.";
       } else if (text.includes('game')) {
         response = "Suka main game? Zahra juga bikin game labirin aksara lho, seru banget!";
-      } else if (text.includes('tentang Zahra')) {
+      } else if (text.includes('tentang')) {
         response = "Zahra adalah seorang UI/UX designer dan programmer pemula yang passionate terhadap teknologi web dan AI. Selain coding, dia juga suka menulis artikel tech dan berbagi pengetahuan di blog pribadi. Dia spesial kayak kamu sangat spesial buat dia ^.^";
       } else if (text.includes('sekolah')) {
         response = "Zahra adalah mahasiswi dari Universitas Muhammadiyah Purwekerto Semester 5. Dia aktif bukan aktif tapi SUPERRR DUPERRR EXCITEDDDDD dalam membuat project-project kecil dan sering mengikuti perkembangan inovasi teknologi. (Bisa dibilang dia takut ketinggalan)";
@@ -989,4 +989,5 @@
   </script>
 </body>
 </html>
+
 
