--- a/index.html
+++ b/index.html
@@ -753,6 +753,16 @@
           </div>
         </div>
       </div>
+      <div class="col-md-6 animate delay-1">
+          <div class="card flex-row align-items-center p-3">
+            <div class="icon-wrapper mb-0 me-3"><i class="fas fa-temple"></i></div>
+            <div>
+              <h5 class="mb-1">Sang Penjaga Waktu Nusantara</h5>
+              <a href="https://gemini.google.com/share/4c4140e7812b" class="text-info text-decoration-none small">Play Now <i class="fas fa-play ms-1"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -989,5 +999,6 @@
   </script>
 </body>
 </html>
+
 
 
