--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
     <div class="container">
       <h2 class="section-title">Game Zone</h2>
       <p class="section-subtitle">Play, relax, and enjoy my interactive creations.</p>
-      <div class="row g-4">
+      <div class="row g-6">
         <div class="col-md-6 animate">
           <div class="card flex-row align-items-center p-3">
             <div class="icon-wrapper mb-0 me-3"><i class="fas fa-gamepad"></i></div>
@@ -755,13 +755,12 @@
       </div>
       <div class="col-md-6 animate delay-1">
           <div class="card flex-row align-items-center p-3">
-            <div class="icon-wrapper mb-0 me-3"><i class="fas fa-temple"></i></div>
+            <div class="icon-wrapper mb-0 me-3"><i class="fas fa-landmark"></i></div>
             <div>
               <h5 class="mb-1">Sang Penjaga Waktu Nusantara</h5>
               <a href="https://gemini.google.com/share/4c4140e7812b" class="text-info text-decoration-none small">Play Now <i class="fas fa-play ms-1"></i></a>
             </div>
           </div>
-        </div>
       </div>
     </div>
   </section>
@@ -999,6 +998,7 @@
   </script>
 </body>
 </html>
+
 
 
 
